<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".CreateAccountActivity">

    <ProgressBar
        android:id="@+id/create_acct_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:visibility="gone" />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/acct_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <EditText
            android:id="@+id/FirstName"
            android:hint="@string/First_Name_text"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/LastName"
            android:hint="@string/Last_Name_text"
            android:inputType="textPersonName"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:id="@+id/divider"
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="?android:attr/listDivider"
            android:foreground="@android:color/holo_green_light" />



        <TextView
            android:id="@+id/privateInformation"
            android:text="@string/private_information_text"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <AutoCompleteTextView
            android:id="@+id/emailAccount"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/passwordAccount"
            android:hint="@string/password"
            android:layout_marginTop="16dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
        android:id="@+id/create_acc_button"
        android:textColor="@android:color/holo_green_light"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        android:text="@string/create_text"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>




    </LinearLayout>



</LinearLayout>