<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatRoom.ChatRoomRecipesActivity">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/RecipeTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:singleLine="true"
            android:text="@string/recipe_title"
            android:textColor="@color/colorAccent"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.078"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/mealImageView"
            android:layout_width="141dp"
            android:layout_height="118dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="4dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RecipeTitleTextView"
             />

        <TextView
            android:id="@+id/RecipeServingsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:text="@string/servings_text"
            android:textColor="@color/colorAccent"
            android:textSize="17dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RecipeTitleTextView" />

        <TextView
            android:id="@+id/TimeToMakeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:text="@string/time_to_make"
            android:textColor="@color/colorAccent"
            android:textSize="17dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RecipeServingsTextView" />

        <Button
            android:id="@+id/instructions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="280dp"
            android:layout_marginBottom="468dp"
            android:backgroundTint="#FFFFFF"
            android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:text="@string/instruction_text"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/design"
            android:layout_width="1050dp"
            android:layout_height="874dp"
            android:layout_marginTop="168dp"
            android:rotation="-90"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_label_24" />



    </androidx.constraintlayout.widget.ConstraintLayout>


    <ListView
        android:id="@+id/ingredientListView"
        android:layout_width="379dp"
        android:layout_height="438dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:paddingTop="40dp" />



</RelativeLayout>